Updated things to java 21